# netsim

./: CMakeLists.txt  README.md  main.cpp
include/: factory.hxx  helpers.hxx  nodes.hxx  package.hxx  reports.hxx  simulation.hxx  storage_types.hxx  types.hxx
src/: factory.cpp  helpers.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp
tests/: main_gtest.cpp  test_factory.cpp  test_factory_io.cpp  test_nodes.cpp  test_products.cpp  test_reports.cpp  test_simulation.cpp
